--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,32 +1,35 @@
 {
-    "name": "mipod",
-    "version": "0.1.0",
-    "description": "A node module for exposing an MPD API, either as REST service or as a library to include. Written in Typescript, executed in Javascript.",
-    "homepage": "https://github.com/jotak/mipod",
-    "author": "Joël Takvorian <joel.takvorian@qaraywa.net> (https://github.com/jotak)",
-    "contributors": [{
-        "name": "Joël Takvorian",
-        "email": "joel.takvorian@qaraywa.net"
-    }],
-    "license": {
-        "type": "MIT",
-        "url": "https://github.com/jotak/mipod/blob/master/LICENSE"
-    },
-    "main": "main.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/jotak/mipod"
-    },
-    "bugs": {
-        "url": "https://github.com/jotak/mipod/issues"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "dependencies": {
-        "express": ">=4.9.0",
-        "body-parser": ">=1.9.0",
-        "q": ">=1.0.0",
-        "type-check": ">=0.3.0"
+  "name": "mipod",
+  "version": "0.1.0",
+  "description": "A node module for exposing an MPD API, either as REST service or as a library to include. Written in Typescript, executed in Javascript.",
+  "homepage": "https://github.com/jotak/mipod",
+  "author": "Joël Takvorian <joel.takvorian@qaraywa.net> (https://github.com/jotak)",
+  "contributors": [
+    {
+      "name": "Joël Takvorian",
+      "email": "joel.takvorian@qaraywa.net"
     }
+  ],
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/jotak/mipod/blob/master/LICENSE"
+  },
+  "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jotak/mipod"
+  },
+  "bugs": {
+    "url": "https://github.com/jotak/mipod/issues"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "express": ">=4.9.0",
+    "body-parser": ">=1.9.0",
+    "q": ">=1.0.0",
+    "type-check": ">=0.3.0",
+    "socket.io": "~1.2.0"
+  }
 }
