--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mipod",
   "version": "0.1.0",
-  "description": "A node module for exposing an MPD API, either as REST service or as a library to include. Written in Typescript, executed in Javascript.",
+  "description": "A node module for exposing an MPD API, either as REST service, as Websocket or as a library to include. Written in Typescript, executed in Javascript.",
   "homepage": "https://github.com/jotak/mipod",
   "author": "Joël Takvorian <joel.takvorian@qaraywa.net> (https://github.com/jotak)",
   "contributors": [
